termine transaction et demare creation pompier

--- a/PimPomBro/PimPomBro.csproj
+++ b/PimPomBro/PimPomBro.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="CreationPompier.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreationPompier.Designer.cs">
+      <DependentUpon>CreationPompier.cs</DependentUpon>
+    </Compile>
     <Compile Include="gestionPompiers.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreationPompier.resx">
+      <DependentUpon>CreationPompier.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="gestionPompiers.resx">
       <DependentUpon>gestionPompiers.cs</DependentUpon>
