--- a/PimPomBro/PimPomBro.csproj
+++ b/PimPomBro/PimPomBro.csproj
@@ -58,6 +58,12 @@
       <DependentUpon>ConnexionAdmin.cs</DependentUpon>
     </Compile>
     <Compile Include="Connexion.cs" />
+    <Compile Include="dateHabilitation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dateHabilitation.Designer.cs">
+      <DependentUpon>dateHabilitation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ConnexionAdmin.resx">
       <DependentUpon>ConnexionAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dateHabilitation.resx">
+      <DependentUpon>dateHabilitation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
